Yeong Chai's Changes: - Added the layout files and the Activity files for 'Report Issues' feature. - Updated the strings information (strings.xml) for reporting issue's UI. - Updated the dimension information (dimens.xml) for reporting issue's UI. - Added the reporting issues entity class (IssuesContent.java) to keep the information for reporting a new issue before submitting onto the web database. - Added the codes to test drive the submission of a new issue to the web database * * Excludes the submission of  issue data such as 'Reporter's name', 'E-mail', 'Contact No.', 'Photo of the defect'.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="rating">15dip</dimen>
     <dimen name="genre">13dip</dimen>
     <dimen name="year">12dip</dimen>
+    <!-- Yeong Chai's Image dimension -->
+    <dimen name="image_top_margin">14dp</dimen>
 </resources>
