--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,15 @@
 <resources>
 
     <color name="urgency">#666666</color>
-    <color name="date">#888888</color>
+    <color name="datetime">#888888</color>
     <color name="list_divider">#d9d9d9</color>
     <color name="list_row_start_color">#ffffff</color>
     <color name="list_row_end_color">#ffffff</color>
     <color name="list_row_hover_start_color">#ebeef0</color>
     <color name="list_row_hover_end_color">#ebeef0</color>
-
+    <color name="urgency_very_high">#ff0000</color>
+    <color name="urgency_high">#ff4500</color>
+    <color name="urgency_normal">#00ff00</color>
+    <color name="urgency_low">#00ee00</color>
+    <color name="urgency_very_low">#00cd00</color>
 </resources>
