--- a/app/src/main/res/layout/activity_view_issue.xml
+++ b/app/src/main/res/layout/activity_view_issue.xml
@@ -1,122 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:numColumns="auto_fit"
-    android:verticalSpacing="10dp"
-    android:horizontalSpacing="10dp"
-    android:stretchMode="none"
-    android:gravity="center"
-    android:columnCount="2"
-    android:padding="15dp">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollview_view_issue"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:text="@string/label_issue_title"
-        android:layout_column="0"
-        style="@style/formLabelStyle" />
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_column="1"
-    />
+    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:stretchMode="none"
+        android:gravity="center"
+        android:columnCount="2"
+        android:padding="15dp">
 
-    <TextView
-        android:text="@string/label_date"
-        android:layout_column="0"
-        style="@style/formLabelStyle"/>
-    <TextView
-        android:id="@+id/tv_date"
-        android:layout_column="1"
-        />
+        <TextView
+            android:text="@string/label_issue_title"
+            android:layout_column="0"
+            style="@style/formLabelStyle" />
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_column="1"
+            />
 
-    <TextView
-        android:text="@string/label_time"
-        android:layout_column="0"
-        style="@style/formLabelStyle"/>
-    <TextView
-        android:id="@+id/tv_time"
-        android:layout_column="1"
-        />
+        <TextView
+            android:text="@string/label_date"
+            android:layout_column="0"
+            style="@style/formLabelStyle"/>
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_column="1"
+            />
 
-    <TextView
-        android:text="@string/label_location"
-        android:layout_column="0"
-        style="@style/formLabelStyle"/>
-    <TextView
-        android:id="@+id/tv_location"
-        android:layout_column="1"
-        />
+        <TextView
+            android:text="@string/label_time"
+            android:layout_column="0"
+            style="@style/formLabelStyle"/>
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_column="1"
+            />
 
-    <TextView
-        android:text="@string/label_description"
-        android:layout_column="0"
-        style="@style/formLabelStyle"
-        />
-    <TextView
-        android:id="@+id/tv_description"
-        android:layout_column="1"
-        />
+        <TextView
+            android:text="@string/label_location"
+            android:layout_column="0"
+            style="@style/formLabelStyle"/>
+        <TextView
+            android:id="@+id/tv_location"
+            android:layout_column="1"
+            />
 
-    <TextView
-        android:text="@string/label_urgency"
-        android:layout_column="0"
-        style="@style/formLabelStyle"
-        />
-    <TextView
-        android:id="@+id/tv_urgency"
-        android:layout_column="1"
-        />
+        <!-- Image -->
+        <com.android.volley.toolbox.NetworkImageView
+            android:id="@+id/img_issue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginRight="8dp" />
 
-    <TextView
-        android:text="@string/label_reporter"
-        android:layout_column="0"
-        style="@style/formLabelStyle"
-        />
-    <TextView
-        android:id="@+id/tv_reporter"
-        android:layout_column="1"
+        <TextView
+            android:text="@string/label_description"
+            android:layout_column="0"
+            style="@style/formLabelStyle"
+            />
+        <TextView
+            android:id="@+id/tv_description"
+            android:layout_column="1"
+            android:layout_width="wrap_content" />
 
-        />
+        <TextView
+            android:text="@string/label_urgency"
+            android:layout_column="0"
+            style="@style/formLabelStyle"
+            />
+        <TextView
+            android:id="@+id/tv_urgency"
+            android:layout_column="1"
+            />
 
-    <TextView
-        android:text="@string/label_email"
-        android:layout_column="0"
-        style="@style/formLabelStyle"
-        />
-    <TextView
-        android:id="@+id/tv_email"
-        android:layout_column="1"
-        android:layout_height="wrap_content"
-        android:singleLine="false"
-        android:layout_width="match_parent" />
+        <TextView
+            android:text="@string/label_reporter"
+            android:layout_column="0"
+            style="@style/formLabelStyle"
+            />
+        <TextView
+            android:id="@+id/tv_reporter"
+            android:layout_column="1"
 
-    <TextView
-        android:text="@string/label_contact"
-        style="@style/formLabelStyle"
-        android:layout_column="0"
-        />
-    <TextView
-        android:id="@+id/tv_contact"
-        android:layout_column="1"
-        />
+            />
+
+        <TextView
+            android:text="@string/label_email"
+            android:layout_column="0"
+            style="@style/formLabelStyle"
+            />
+        <TextView
+            android:id="@+id/tv_email"
+            android:layout_column="1"
+            android:layout_height="wrap_content"
+            android:singleLine="false"
+            android:layout_width="match_parent" />
+
+        <TextView
+            android:text="@string/label_contact"
+            style="@style/formLabelStyle"
+            android:layout_column="0"
+            />
+        <TextView
+            android:id="@+id/tv_contact"
+            android:layout_column="1"
+            />
 
 
-    <TextView
-        android:text="@string/label_status"
-        style="@style/formLabelStyle"
-        android:layout_column="0"
-        />
-    <TextView
-        android:id="@+id/tv_status"
-        android:layout_column="1"
-        />
+        <TextView
+            android:text="@string/label_status"
+            style="@style/formLabelStyle"
+            android:layout_column="0"
+            />
+        <TextView
+            android:id="@+id/tv_status"
+            android:layout_column="1"
+            />
 
 
-    <TextView
-        android:text="@string/label_status_comment"
-        style="@style/formLabelStyle"
-        android:layout_column="0"
-        />
-    <TextView
-        android:id="@+id/tv_status_comment"
-        android:layout_column="1"
-        />
-</GridLayout>
+        <TextView
+            android:text="@string/label_status_comment"
+            style="@style/formLabelStyle"
+            android:layout_column="0"
+            />
+        <TextView
+            android:id="@+id/tv_status_comment"
+            android:layout_column="1"
+            />
+    </GridLayout>
+</ScrollView>
