--- a/app/src/main/res/layout/activity_view_issue.xml
+++ b/app/src/main/res/layout/activity_view_issue.xml
@@ -54,7 +54,7 @@
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/img_issue"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             android:layout_alignParentLeft="true"
             android:layout_marginRight="8dp" />
 
