--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -34,6 +34,8 @@
         android:layout_below="@id/title"
         android:layout_marginTop="1dip"
         android:layout_toRightOf="@+id/thumbnail"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textSize="@dimen/location" />
 
     <!-- Urgency Level -->
