--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <color name="body_font">#666666</color>
     <color name="urgency">#666666</color>
     <color name="datetime">#888888</color>
     <color name="list_divider">#d9d9d9</color>
@@ -9,8 +9,8 @@
     <color name="list_row_hover_start_color">#ebeef0</color>
     <color name="list_row_hover_end_color">#ebeef0</color>
     <color name="urgency_very_high">#ff0000</color>
-    <color name="urgency_high">#ff4500</color>
-    <color name="urgency_normal">#00ff00</color>
+    <color name="urgency_high">#ffa500</color>
+    <color name="urgency_normal">#ffd700</color>
     <color name="urgency_low">#00ee00</color>
     <color name="urgency_very_low">#00cd00</color>
 
